# OrderBook-Price-Direction-Predictor

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  run_pipeline.py
ingest_data/: collector.py  collector2.py  collector_multi.py
ingest_data/data/: l2_data_ETHUSDT.csv
live_prediction/: live_predict.py
model_training/: backtest.py  predict.py  train.ipynb  train_model.py
model_training/artifacts/: btc_direction_model.joblib  btc_direction_model_20260420T101845Z.joblib  metrics_20260420T101845Z.json
transform_data/: l2_data_btcusdt.csv  l2_data_btcusdt_transformed.csv  transform.ipynb  transform_dataset.py
tui_app/: __init__.py  cli.py  features.py  modes.py  ui.py
